# otus-cpp-2023-06-hw01

./: .gitignore  CMakeLists.txt  main.cpp
.github/workflows/: cmake.yml
